--- a/index.html
+++ b/index.html
@@ -1,9 +1,37 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+  <title>FCC: Landing Page</title>
+</head>
+
 <body>
+  <header id="header">
+    <h1><img id="header-img" class="logo-class" src="../landingpage/NorthernWaxLogo.png" alt="Northern Wax Logo image" />Northern Wax Co.</h1>
+    <nav id="nav-bar"></nav>
+  </header>
+  <main>
 
-<style>
-
-</style>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  </main>
+  <style>
+     :root {
+      font-family: 'Trebuchet MS', Sans-Serif;
+    }
+    
+    #nav-bar {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+    }
+    
+    .logo-class {
+      margin: 0px 5px 0px 5px;
+      width: 50px;
+      height: 50px;
+      vertical-align: middle;
+    }
+  </style>
 </body>
+
 </html>
