--- a/index.html
+++ b/index.html
@@ -7,29 +7,62 @@
 
 <body>
   <header id="header">
-    <h1><img id="header-img" class="logo-class" src="../landingpage/NorthernWaxLogo.png" alt="Northern Wax Logo image" />Northern Wax Co.</h1>
-    <nav id="nav-bar"></nav>
+      <div class="logo-container">
+        <h1><img id="header-img" class="logo-class" src="../landingpage/NorthernWaxLogo.png"
+            alt="Northern Wax Logo image" /><em>Northern Wax Co.</em></h1>
+      </div>
+      <nav id="nav-bar" class="nav-container">
+        <ul class="nav-list">
+            <li><a class="nav-link" href=""><strong>Link 1</strong></a></li>
+            <li><a class="nav-link" href=""><strong>Link 2</strong></a></li>
+            <li><a class="nav-link" href=""><strong>Link 3</strong></a></li>
+        </ul>
+      </nav>
   </header>
   <main>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </main>
   <style>
-     :root {
+    :root {
       font-family: 'Trebuchet MS', Sans-Serif;
     }
-    
+
     #nav-bar {
-      position: absolute;
-      top: 0px;
-      left: 0px;
+      width: 50%;
+      align-self: center;
     }
-    
+    .nav-list {
+      list-style: none;
+      display: flex;
+      justify-content: flex-end;
+    }
+
+    .nav-link {
+      /* TODO fill in formatting */
+    }
+
+    .logo-container {
+      width: 50%;
+    }
+
     .logo-class {
       margin: 0px 5px 0px 5px;
       width: 50px;
       height: 50px;
       vertical-align: middle;
+    }
+    header {
+      display: flex;
+      position: fixed;
+      top: 0px;
+      left: 0px;
+      background-color: lightblue;
+      width: 100%;
+    }
+    li {
+      width: 100px;
+      text-align: center;
     }
   </style>
 </body>
