--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <body>
   <header id="header">
     <div class="logo-container">
-      <h1><img id="header-img" class="logo-class"
-          src="../landingpage/NorthernWaxLogo.png" /><em>Northern Wax Co.</em>
+      <h1><img id="header-img" class="logo-class" src="../landingpage/NorthernWaxLogo.png" /><em>Northern Wax Co.</em>
       </h1>
     </div>
     <nav id="nav-bar" class="nav-container">
@@ -20,9 +19,9 @@
       </ul>
     </nav>
   </header>
-  <main class="section-container">
+  <main>
     <div id="info-section">
-      <h2 id="wax-heading">Wax seals are the way to add a unique style to your envelopes!</h2>
+      <h2 id="wax-heading">Wax seals are a great way to add a unique style to your envelopes!</h2>
       <form id="form" action="https://www.freecodecamp.com/email-submit">
         <input id="email" name="email" type="email" placeholder="Email..." required />
         <input id="submit" type="submit" value="Get More Info">
@@ -33,112 +32,149 @@
       </iframe>
     </div>
     <div id="pricing-section">
-
+      <p>This is going to be information about wax seals!</p>
     </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </main>
-  <style>
-    :root {
-      font-family: 'Trebuchet MS', Sans-Serif;
-    }
-
-    #product-video {
-      margin-top: 50px;
-      margin-bottom: 50px;
-      align-self: center;
-    }
-
-    #form {
-      display: flex;
-      flex-direction: column;
-      align-content: center;
-      justify-content: center;
-    }
-
-    #nav-bar {
-      width: 50%;
-      align-self: center;
-    }
-
-    #email {
-      align-self: center;
-      text-align: center;
-      width: 200px;
-    }
-
-    #submit {
-      margin-top: 10px;
-      align-self: center;
-      width: 100px;
-      height: 30px;
-      background-color: maroon;
-      color: white;
-      border: none;
-      border-radius: 6px;
-    }
-
-    .section-container {
-      display: flex;
-      flex-direction: column;
-      align-content: center;
-      width: 80%;
-      margin: 100px 100px 0px 100px;
-    }
-
-    .nav-list {
-      list-style: none;
-      display: flex;
-      justify-content: flex-end;
-    }
-
-    .nav-link {
-      /* TODO fill in formatting */
-    }
-
-    .info-section {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
-
-    .logo-container {
-      width: 50%;
-    }
-
-    .logo-class {
-      margin: 0px 5px 0px 5px;
-      width: 50px;
-      height: 50px;
-      vertical-align: middle;
-    }
-
-    header {
-      display: flex;
-      position: fixed;
-      top: 0px;
-      left: 0px;
-      background-color: lightblue;
-      width: 100%;
-    }
-
-    li {
-      width: 150px;
-      text-align: center;
-    }
-
-    h2,
-    h3 {
-      text-align: center;
-    }
-
-    @media (max-width: 1100px) {
-      iframe {
-        width: 420px;
-        height: 315px;
-      }
-    }
-  </style>
+  <footer id="footer">
+    <em>Northern Wax Co. | Copyright 2019</em>
+  </footer>
 </body>
 
 </html>
+
+<style>
+  :root {
+    font-family: 'Trebuchet MS', Sans-Serif;
+  }
+
+  #product-video {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    align-self: center;
+  }
+
+  #form {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    margin: 10px 0px;
+  }
+
+  #nav-bar {
+    width: 50%;
+    align-self: center;
+  }
+
+  #email {
+    border-radius: 6px;
+    align-self: center;
+    text-align: center;
+    width: 200px;
+  }
+
+  #submit {
+    margin-top: 10px;
+    align-self: center;
+    width: 100px;
+    height: 30px;
+    background-color: maroon;
+    color: white;
+    border: none;
+    border-radius: 10px;
+  }
+
+  #submit:hover {
+    opacity: 0.8;
+  }
+
+  #pricing-section {
+    padding: 10px;
+  }
+
+  .nav-list {
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .nav-link {
+    color: black;
+    text-decoration: none;
+    font-size: 18px;
+  }
+
+  #info-section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 10px 0px;
+  }
+
+
+  .logo-container {
+    width: 50%;
+  }
+
+  .logo-class {
+    margin: 0px 5px 0px 5px;
+    width: 50px;
+    height: 50px;
+    vertical-align: middle;
+  }
+
+  main {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-self: center;
+    width: 80%;
+    margin: 100px 100px 10px 100px;
+  }
+
+  header {
+    display: flex;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    background-color: lightblue;
+    width: 100%;
+  }
+
+  li {
+    width: 150px;
+    text-align: center;
+  }
+
+  h2,
+  h3 {
+    text-align: center;
+  }
+
+  body {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  footer {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    bottom: 0;
+    left: 0;
+    height: 50px;
+    width: 100%;
+    background-color: lightblue;
+  }
+
+  @media (max-width: 1100px) {
+    iframe {
+      width: 420px;
+      height: 315px;
+    }
+  }
+</style>
